[package]
name = "ha-ndarray"
version = "0.2.0"
edition = "2021"
authors = ["code@tinychain.net"]
description = "A hardware-accelerated n-dimensional array"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/haydnv/ha-ndarray.git"

keywords = ["ndarray", "tensor", "gpu", "ml", "parallel"]
categories = ["data-structures", "hardware-support", "mathematics"]

[features]
opencl = ["ocl"]

[build-dependencies]
pkg-config = "0.3"

[dependencies]
lazy_static = "1.4"
ocl = { version = "0.19", optional = true }
rayon = "1.8"
smallvec = "1.11"
