[package]
name = "ha_ndarray_comparison"
version = "0.1.0"
edition = "2021"

# [lib]
# name = "ha_ndarray_comparison"
# crate-type = ["cdylib"]

# [features]
# all = ["freqfs", "opencl", "stream"]
# opencl = ["ocl"]
# stream = ["async-trait", "destream", "futures"]

[dependencies]
numpy = "0.14"
ndarray = "0.15.6"
ha-ndarray = "0.1.1"
ndarray-rand = "0.14.0"
pyo3 = { version = "0.14.5", features = ["extension-module"] }
ocl = "0.19.5"
rand = "0.8"
